# SQL-Compare-App

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  connection_dialog.py  connections.json  pyproject.toml  pytest.ini  requirements.txt  schema_compare.py  schema_comparer.py  setup.py
app/: config.py  main.py
app/_internal/connectiondata/: connections.json  encryption.key
app/core/: __init__.py  compare_proc_schema.py  compare_procedure_schema.py  comparer.py  winmerge_comparator.py
app/ui/: __init__.py  connect_screen.py  filter_screen.py  main_screen.py
app/utils/: __init__.py  database_connection.py  database_connection_manager.py  encryption_manager.py  saved_connections_manager.py  screen_navigation_manager.py
src/sql_compare/: __init__.py  __main__.py  main.py
src/sql_compare/core/: __init__.py  (+1 more)
src/sql_server_compare.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
test/: test.py  test_encryption_manager.py
tests/: TextComparer.py  __init__.py  deepseek2.py  deepseek_python_20250605_ae5d25.py  gpt.py  gpt12.py  gpt2.py  gpt3.py  test_connection_manager.py  test_main.py  test_schema_comparer.py
tests/scripts/: run_encryption_demo.py  run_saved_connections_demo.py
tests/test_ui/: test_connect_screen.py  test_main_screen.py
tests/test_utils/: test_database_connection_manager.py  test_encryption_manager.py  test_saved_connections_manager.py  test_screen_navigation_manager.py
tests/web/: index.html
ui/: connect_screen.py  filter_screen.py  main_screen.py
utils/: screen_navigation.py
(+4 files in other folders)
